fix safari distortion, firefox blank image outline

--- a/app/assets/stylesheets/community_feed.css.sass
+++ b/app/assets/stylesheets/community_feed.css.sass
@@ -182,8 +182,6 @@
   position: fixed
   top: 30%
   +transition(all 0.5s ease-in-out)
-  img
-    height: 100%
 
 .newStory
   @extend %sideSliders
